# argb_led

./: CMakeLists.txt  Kconfig  nrf52840dk_nrf52840.overlay  nrf_bindings.h  prj.conf
app/: CMakeLists.txt  lut_table.py  nrf52840dk_nrf52840.overlay  nrf_bindings.h  prj.conf
app/src/: led_anim_thread.c  led_anim_thread.h  led_anim_thread_internal.h  led_strip_service.c  led_strip_service.h  main.c
custom_sk6812/drivers/: CMakeLists.txt  Kconfig
custom_sk6812/drivers/rgbw_strip/: CMakeLists.txt  Kconfig  Kconfig.sk6812  sk6812_spi.c
custom_sk6812/include/: rgbw_strip.h
husb238/drivers/: CMakeLists.txt  Kconfig
husb238/drivers/husb238/: CMakeLists.txt  Kconfig  husb238.c
husb238/dts/bindings/: vendor-prefixes.txt
husb238/dts/bindings/sensor/: hynetek,husb238.yaml
husb238/include/: husb238.h
src/: main.c
